add stylesheet for simple-bio.html

--- a/simple-bio.html
+++ b/simple-bio.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+  <link href="simple-bio-style.css"
+        type="text/css"
+        rel="stylesheet" />
   <title>My Bio</title>
 </head>
 
